tests/fail/turkce-olmayan-tanim-isim.kip
(bu tam-sayıyı) kefi,
  budur.
